--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
       </section>
 
       <section id="contact" class="contact">
+        <h2>Contact</h2>
         <div class="cont container">
           <div class="contact-text">
-            <h3>Contact</h3>
+            <h3>Would love to hear from you Feel free to reach out</h3>
             <figure>
               <a href="https://github.com/yosabba/" target="_blank">
                 <img class="socials" src="./Octicons-mark-github.svg" alt="" />
@@ -127,7 +128,7 @@
     </main>
 
     <footer>
-      <p>&copy; 2022 All rights reserved</p>
+      <p>&copy; 2022 Dominic Portfolio All rights reserved</p>
     </footer>
   </body>
 </html>
