--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     <header>
       <h1>DJ</h1>
       <ul>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
+        <li>
+          <a href="#about">Home</a>
+        </li>
+        <li>
+          <a href="#contact">About</a>
+        </li>
       </ul>
     </header>
     <main>
@@ -71,18 +75,18 @@
         </svg>
       </a>
 
-      <section id="about" class="about-me">
-        <h2>About Me</h1>
+      <article id="about" class="about-me">
+        <h2>About Me</h2>
         <p>
           I have a passion for creating things that will make people's lives
           easier. My favorite things to do are to code and work on cars. I
-          graduated with a (AS) Associates of Science in Computer Science at Kingsborough
-          Community College. One of my favorite hobby's is to rebuild car
-          motors. I think working on cars helps me work on my problem solving
-          ability. You run into constant problems adn need to come up with
-          effective solutions
+          graduated with a (AS) Associates of Science in Computer Science at
+          Kingsborough Community College. One of my favorite hobby's is to
+          rebuild car motors. I think working on cars helps me work on my
+          problem solving ability. You run into constant problems adn need to
+          come up with effective solutions
         </p>
-      </section>
+      </article>
 
       <section id="contact" class="contact">
         <h2>Contact</h2>
@@ -90,16 +94,12 @@
           <div class="contact-text">
             <h3>Would love to hear from you Feel free to reach out</h3>
             <figure>
-              <a href="https://github.com/yosabba/" target="_blank">
-                <img class="socials" src="./Octicons-mark-github.svg" alt="" />
-                <figcaption>Github</figcaption>
-              </a>
+              <img class="socials" src="./Octicons-mark-github.svg" alt="" />
+              <figcaption>Github</figcaption>
             </figure>
             <figure>
-              <a href="https://linkedin.com" target="_blank">
-                <img class="socials" src="./Linkedin_icon.svg" alt="" />
-                <figcaption>LinkedIn</figcaption>
-              </a>
+              <img class="socials" src="./Linkedin_icon.svg" alt="" />
+              <figcaption>LinkedIn</figcaption>
             </figure>
             <h6>Email</h6>
             <a href="mailto::djohnson3794@gmail.com" class="mail"
