--- a/index.html
+++ b/index.html
@@ -95,11 +95,15 @@
             <h3>Would love to hear from you Feel free to reach out</h3>
             <figure>
               <img class="socials" src="./Octicons-mark-github.svg" alt="" />
-              <figcaption>Github</figcaption>
+              <figcaption>
+                <a href="https://github.com/yosabba/"> Github </a>
+              </figcaption>
             </figure>
             <figure>
               <img class="socials" src="./Linkedin_icon.svg" alt="" />
-              <figcaption>LinkedIn</figcaption>
+              <figcaption>
+                <a href="https://LinkedIn.com"> LinkedIn </a>
+              </figcaption>
             </figure>
             <h6>Email</h6>
             <a href="mailto::djohnson3794@gmail.com" class="mail"
