--- a/index.html
+++ b/index.html
@@ -14,18 +14,20 @@
     <title>Dominic Portfolio</title>
   </head>
   <body>
+    <!-- header with links -->
     <header>
       <h1>DJ</h1>
-      <ul>
+      <ol>
         <li>
-          <a href="#about">Home</a>
+          <a href="#about">About</a>
         </li>
         <li>
-          <a href="#contact">About</a>
+          <a href="#contact">Contact</a>
         </li>
-      </ul>
+      </ol>
     </header>
     <main>
+      <!-- Hero section -->
       <section class="hero">
         <img src="./profilepic.png" alt="Picture of dominic" />
         <div class="hero-text">
@@ -37,44 +39,8 @@
           </p>
         </div>
       </section>
-      <a href="#about">
-        <svg
-          version="1.1"
-          id="Capa_1"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          x="0px"
-          y="0px"
-          viewBox="0 0 55.751 55.751"
-          style="enable-background: new 0 0 55.751 55.751"
-          xml:space="preserve"
-        >
-          <g>
-            <path
-              d="M31.836,43.006c0.282-0.281,0.518-0.59,0.725-0.912L54.17,20.485c2.107-2.109,2.109-5.528,0-7.638
-            c-2.109-2.107-5.527-2.109-7.638,0l-18.608,18.61L9.217,12.753c-2.109-2.108-5.527-2.109-7.637,0
-            C0.527,13.809-0.002,15.19,0,16.571c-0.002,1.382,0.527,2.764,1.582,3.816l21.703,21.706c0.207,0.323,0.445,0.631,0.729,0.913
-            c1.078,1.078,2.496,1.597,3.91,1.572C29.336,44.604,30.758,44.084,31.836,43.006z"
-            />
-          </g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-        </svg>
-      </a>
 
+      <!-- about section -->
       <article id="about" class="about-me">
         <h2>About Me</h2>
         <p>
@@ -87,7 +53,7 @@
           come up with effective solutions
         </p>
       </article>
-
+      <!-- contact section with form -->
       <section id="contact" class="contact">
         <h2>Contact</h2>
         <div class="cont container">
@@ -130,7 +96,7 @@
         </div>
       </section>
     </main>
-
+<!-- footer -->
     <footer>
       <p>&copy; 2022 Dominic Portfolio All rights reserved</p>
     </footer>
