added changes to text

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <section class="hero">
         <img src="./profilepic.png" alt="Picture of dominic" />
         <div class="hero-text">
-          <h1>Hello, I'm <span>Dominic</span>.</h1>
+          <h2>Hello, I'm <span>Dominic</span>.</h2>
           <p>
             A Software Developer located in Atlanta GA. I'm a software developer
             with a passion for creating things that make people's lives easier.
@@ -40,9 +40,11 @@
         </div>
       </section>
 
+      <hr/>
+
       <!-- about section -->
       <article id="about" class="about-me">
-        <h2>About Me</h2>
+        <h3>About Me</h3>
         <p>
           I have a passion for creating things that will make people's lives
           easier. My favorite things to do are to code and work on cars. I
@@ -52,6 +54,13 @@
           problem solving ability. You run into constant problems adn need to
           come up with effective solutions
         </p>
+        <h3>My Favorite hobby's</h3>
+        <ul>
+          <li>rebuilt 2 engines</li>
+          <li>300 books read</li>
+          <li>love nature</li>
+          <li>love to code</li>
+        </ul>
       </article>
       <!-- contact section with form -->
       <section id="contact" class="contact">
