fixing so called bugs

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="hero-text">
           <h2>Hello, I'm <span>Dominic</span>.</h2>
           <p>
-            A Software Developer located in Atlanta GA. I'm a software developer
+            A Software Developer located in Atlanta, GA. I'm a software developer
             with a passion for creating things that make people's lives easier.
             My favorite things to do are to code and work on cars.
           </p>
@@ -49,7 +49,7 @@
           I have a passion for creating things that will make people's lives
           easier. My favorite things to do are to code and work on cars. I
           graduated with a (AS) Associates of Science in Computer Science at
-          Kingsborough Community College. One of my favorite hobby's is to
+          KCC. One of my favorite hobby's is to
           rebuild car motors. I think working on cars helps me work on my
           problem solving ability. You run into constant problems adn need to
           come up with effective solutions
